welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: Boolean does not take parameters
	if(versLAvant())
                     ^Program:11: error: Boolean does not take parameters
	else if(!versLAvant())
                           ^